feat(rma-frontend):Modified Stock entry creation page

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -12,7 +12,7 @@
         <ion-col class="ion-text-right">
           <ion-button
             color="tertiary"
-            [routerLink]="['/warranty/stock-entry', 'new']"
+            [routerLink]="['/warranty/stock-entry', 'new', uuid]"
           >
             Add
           </ion-button>
