--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/view-warranty-claims.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/view-warranty-claims.page.html
@@ -37,6 +37,7 @@
     <service-invoices *ngSwitchCase="1"> </service-invoices>
     <status-history *ngSwitchCase="2" [warrantyObject]="warrantyDetail">
     </status-history>
-    <stock-entry *ngSwitchCase="3"> </stock-entry>
+    <stock-entry *ngSwitchCase="3" [warrantyObject]="warrantyDetail">
+    </stock-entry>
   </div>
 </ion-content>
