--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
@@ -10,5 +10,333 @@
 </ion-header>
 
 <ion-content class="page-background">
-  <h1>Coming soon ...</h1>
+  <ion-fab
+    class="ion-margin-end"
+    slot="fixed"
+    vertical="top"
+    color="light"
+    horizontal="end"
+  >
+    <ion-fab-button
+      class="fab-position"
+      [disabled]="stockEntryForm.invalid"
+      (click)="submitDraft()"
+    >
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <form [formGroup]="stockEntryForm">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title color="tertiary">
+          Details
+        </ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-grid class="i-no-padding">
+          <ion-row class="align">
+            <ion-col>
+              <mat-form-field class="example-full-width">
+                <input
+                  matInput
+                  type="text"
+                  required
+                  placeholder="Type"
+                  formControlName="type"
+                  [matAutocomplete]="Type"
+                />
+                <mat-autocomplete
+                  autoActiveFirstOption
+                  #Type="matAutocomplete"
+                  [displayWith]="getOption"
+                  (keyup.enter)="getFormState($event.option.value)"
+                  (optionSelected)="getFormState($event.option.value)"
+                >
+                  <mat-option *ngFor="let option of type" [value]="option">
+                    {{ option }}
+                  </mat-option>
+                </mat-autocomplete>
+                <mat-error *ngIf="f.type.hasError('required')">
+                  Type is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </ion-col>
+            <ion-col>
+              <mat-form-field class="example-full-width">
+                <input
+                  matInput
+                  required
+                  [matDatepicker]="date"
+                  placeholder="Date"
+                  formControlName="date"
+                  (dateChange)="selectedPostingDate($event)"
+                />
+                <mat-datepicker-toggle
+                  matSuffix
+                  [for]="date"
+                ></mat-datepicker-toggle>
+                <mat-datepicker #date disabled="false"></mat-datepicker>
+                <mat-error *ngIf="f.date.hasError('required')">
+                  Date is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </ion-col>
+          </ion-row>
+          <ion-row class="align">
+            <ion-col>
+              <mat-form-field class="example-full-width">
+                <input
+                  matInput
+                  required
+                  placeholder="Description"
+                  formControlName="description"
+                />
+                <mat-error *ngIf="f.description.hasError('required')">
+                  Description is <strong>required</strong>
+                </mat-error>
+              </mat-form-field>
+            </ion-col>
+            <ion-col> </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-content>
+    </ion-card>
+  </form>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-row class="align">
+        <ion-col>
+          <ion-card-title>
+            <ion-text color="tertiary">
+              Items
+            </ion-text>
+          </ion-card-title>
+        </ion-col>
+        <ion-col class="ion-text-right" size="auto">
+          <ion-button
+            color="tertiary"
+            fill="outline"
+            matTooltip=" ( ctrl + i ) "
+            matTooltipPosition="above"
+            matTooltipClass="tooltip"
+            (ctrlI)="addItem()"
+            (click)="addItem()"
+          >
+            Add
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-card-header>
+    <ion-card-content class="ion-no-padding">
+      <ion-item lines="none">
+        <mat-table #table [dataSource]="dataSource" style="width: 100%;">
+          <ng-container matColumnDef="serial_no">
+            <mat-header-cell *matHeaderCellDef>Serial No</mat-header-cell>
+            <mat-cell
+              *matCellDef="let row;let i = index"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container *ngIf="row.serial_no">
+                {{row.serial_no}}
+              </ng-container>
+              <span class="add-comment" *ngIf="!row.serial_no">
+                Non Serial Item
+              </span>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
+          <ng-container matColumnDef="item_name">
+            <mat-header-cell *matHeaderCellDef>Item</mat-header-cell>
+            <mat-cell
+              *matCellDef="let row;let i = index"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container *ngIf="row.item_name">
+                {{row.item_name}}
+              </ng-container>
+              <span class="add-comment" *ngIf="!row.item_name">
+                Add an item
+              </span>
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateItem(row,i,$event)"
+              >
+                <inline-edit
+                  style="width: 400px !important;"
+                  [value]="row.item_name"
+                  column="item"
+                  [minimumPrice]="row.minimumPrice"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+          </ng-container>
+          <ng-container matColumnDef="source_warehouse">
+            <mat-header-cell *matHeaderCellDef
+              >Source Warehouse</mat-header-cell
+            >
+            <mat-cell
+              *matCellDef="let row;let i = index"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container *ngIf="row.source_warehouse">
+                {{row.source_warehouse}}
+              </ng-container>
+              <span class="add-comment" *ngIf="!row.source_warehouse">
+                Add a Warehouse
+              </span>
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateSWarehouse(row,i,$event)"
+              >
+                <inline-edit
+                  style="width: 400px !important;"
+                  [value]="row.source_warehouse"
+                  column="warehouse"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+          </ng-container>
+          <ng-container matColumnDef="target_warehouse">
+            <mat-header-cell *matHeaderCellDef
+              >Target Warehouse</mat-header-cell
+            >
+            <mat-cell
+              *matCellDef="let row;let i = index"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container *ngIf="row.target_warehouse">
+                {{row.target_warehouse}}
+              </ng-container>
+              <span class="add-comment" *ngIf="!row.target_warehouse">
+                Add a Warehouse
+              </span>
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateTWarehouse(row,i,$event)"
+              >
+                <inline-edit
+                  style="width: 400px !important;"
+                  [value]="row.target_warehouse"
+                  column="warehouse"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+          </ng-container>
+          <ng-container matColumnDef="quantity">
+            <mat-header-cell *matHeaderCellDef>Quantity</mat-header-cell>
+            <mat-cell
+              *matCellDef="let row"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container>
+                {{row.qty}}
+              </ng-container>
+
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateQuantity(row, $event)"
+              >
+                <inline-edit
+                  [value]="row.qty"
+                  column="quantity"
+                  [minimumPrice]="row.minimumPrice"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
+          </ng-container>
+          <ng-container matColumnDef="rate">
+            <mat-header-cell *matHeaderCellDef>Rate</mat-header-cell>
+            <mat-cell
+              *matCellDef="let row"
+              [satPopoverAnchor]="p"
+              tabindex="0"
+              (keyup.enter)="p.open()"
+              (click)="p.open()"
+            >
+              <ng-container>
+                {{row.rate}}
+              </ng-container>
+              <sat-popover
+                #p
+                hasBackdrop
+                xAlign="start"
+                yAlign="start"
+                (closed)="updateRate(row, $event)"
+              >
+                <inline-edit
+                  [value]="row.rate"
+                  column="rate"
+                  [minimumPrice]="row.minimumPrice"
+                ></inline-edit>
+              </sat-popover>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef>Total </mat-footer-cell>
+          </ng-container>
+          <ng-container matColumnDef="total">
+            <mat-header-cell *matHeaderCellDef>Total</mat-header-cell>
+            <mat-cell *matCellDef="let row"
+              >{{row.rate * row.qty | curFormat | async}}</mat-cell
+            >
+            <mat-footer-cell *matFooterCellDef
+              >{{f.total.value | curFormat | async }}</mat-footer-cell
+            >
+          </ng-container>
+          <ng-container matColumnDef="delete">
+            <mat-header-cell *matHeaderCellDef></mat-header-cell>
+            <mat-cell *matCellDef="let row ; let i = index">
+              <ion-button
+                (click)="deleteRow(i)"
+                fill="clear"
+                class="ion-no-padding"
+                color="danger"
+              >
+                <ion-icon slot="icon-only" name="trash"></ion-icon>
+              </ion-button>
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
+          <mat-header-row
+            *matHeaderRowDef="displayedColumns; sticky: true"
+          ></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          <mat-footer-row
+            class="footer"
+            *matFooterRowDef="displayedColumns; sticky: true"
+          ></mat-footer-row>
+        </mat-table>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
