--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -20,13 +20,7 @@
       <ion-grid class="ion-no-padding">
         <ion-row>
           <ion-col *ngIf="!readonly">
-            <input
-              #csvFileInput
-              type="file"
-              id="txtFileUpload"
-              (change)="fileChangedEvent($event)"
-              accept=".csv"
-            />
+            <input #csvFileInput type="file" id="txtFileUpload" (change)="fileChangedEvent($event)" accept=".csv" />
           </ion-col>
           <ion-col *ngIf="readonly">
             <ion-button [disabled]="!stock_receipt_names[0]" (click)="openStockEntries()" fill="clear" shape="round">
@@ -34,33 +28,32 @@
             </ion-button>
           </ion-col>
           <ion-col class="ion-text-right">
-            <ion-button
-              *ngIf="!readonly"
-              color="tertiary"
-              (click)="createMaterialTransfer()"
-            >
+            <ion-button *ngIf="!readonly" color="tertiary" (click)="createMaterialTransfer()">
               Submit Transfer
             </ion-button>
-            <ion-button
-              *ngIf="readonly && status === 'In Transit'"
-              color="tertiary"
-              (click)="acceptTransfer()"
-            >
+            <ion-button *ngIf="readonly && status === 'In Transit'" color="tertiary" (click)="acceptTransfer()">
               Accept Transfer
             </ion-button>
-            <ion-button
-              *ngIf="readonly && status === 'In Transit'"
-              color="danger"
-              (click)="rejectTransfer()"
-            >
+            <ion-button *ngIf="readonly && status === 'In Transit'" color="danger" (click)="rejectTransfer()">
               Return Transfer
             </ion-button>
-            <ion-text
-              *ngIf="readonly && status !== 'In Transit'"
-              [ngStyle]="{'color': status === 'Returned' ? 'red' : 'green' }"
-            >
+            <ion-text *ngIf="readonly && status !== 'In Transit'"
+              [ngStyle]="{'color': status === 'Returned' ? 'red' : 'green' }">
               <h1>Stock Transfer {{ status }}</h1>
             </ion-text>
+          </ion-col>
+        </ion-row>
+        <ion-row >
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <mat-label>Remarks</mat-label>
+              <textarea matInput [(ngModel)]="remarks"></textarea>
+            </mat-form-field>
+          </ion-col>
+          <ion-col>
+            <mat-form-field class="example-full-width">
+              <input  matInput placeholder="Territory" type="text"  [(ngModel)]="territory"/>
+            </mat-form-field>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -84,30 +77,14 @@
         <ion-row>
           <ion-col>
             <mat-form-field class="example-full-width">
-              <input
-                [disabled]="readonly"
-                matInput
-                oninput="this.value = this.value.toUpperCase()"
-                placeholder="From Range"
-                type="text"
-                name="From Range"
-                [(ngModel)]="rangePickerState.fromRange"
-                (ngModelChange)="this.fromRangeUpdate.next($event)"
-                required
-              />
+              <input [disabled]="readonly" matInput oninput="this.value = this.value.toUpperCase()"
+                placeholder="From Range" type="text" name="From Range" [(ngModel)]="rangePickerState.fromRange"
+                (ngModelChange)="this.fromRangeUpdate.next($event)" required />
             </mat-form-field>
             <mat-form-field class="example-full-width">
-              <input
-                [disabled]="readonly"
-                type="text"
-                oninput="this.value = this.value.toUpperCase()"
-                matInput
-                placeholder="To Range"
-                type="string"
-                name="To Range"
-                [(ngModel)]="rangePickerState.toRange"
-                (ngModelChange)="this.toRangeUpdate.next($event)"
-              />
+              <input [disabled]="readonly" type="text" oninput="this.value = this.value.toUpperCase()" matInput
+                placeholder="To Range" type="string" name="To Range" [(ngModel)]="rangePickerState.toRange"
+                (ngModelChange)="this.toRangeUpdate.next($event)" />
             </mat-form-field>
           </ion-col>
 
@@ -119,43 +96,21 @@
 
           <ion-col>
             <mat-form-field class="example-full-width">
-              <input
-                type="text"
-                placeholder="Source Warehouse"
-                matInput
-                [formControl]="warehouseState.s_warehouse"
-                [matAutocomplete]="from_warehouse"
-              />
-              <mat-autocomplete
-                autoActiveFirstOption
-                #from_warehouse="matAutocomplete"
-              >
-                <mat-option
-                (onSelectionChange)="updateItemStock($event.source.value)"
-                  *ngFor="let s_warehouse of filteredWarehouseList1 | async"
-                  [value]="s_warehouse.name"
-                >
+              <input type="text" placeholder="Source Warehouse" matInput [formControl]="warehouseState.s_warehouse"
+                [matAutocomplete]="from_warehouse" />
+              <mat-autocomplete autoActiveFirstOption #from_warehouse="matAutocomplete">
+                <mat-option (onSelectionChange)="updateItemStock($event.source.value)"
+                  *ngFor="let s_warehouse of filteredWarehouseList1 | async" [value]="s_warehouse.name">
                   {{ s_warehouse.name }}
                 </mat-option>
               </mat-autocomplete>
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
-              <input
-                type="text"
-                placeholder="Target Warehouse"
-                matInput
-                [formControl]="warehouseState.t_warehouse"
-                [matAutocomplete]="warehouse"
-              />
-              <mat-autocomplete
-                autoActiveFirstOption
-                #warehouse="matAutocomplete"
-              >
-                <mat-option
-                  *ngFor="let warehouse of filteredWarehouseList2 | async"
-                  [value]="warehouse.name"
-                >
+              <input type="text" placeholder="Target Warehouse" matInput [formControl]="warehouseState.t_warehouse"
+                [matAutocomplete]="warehouse" />
+              <mat-autocomplete autoActiveFirstOption #warehouse="matAutocomplete">
+                <mat-option *ngFor="let warehouse of filteredWarehouseList2 | async" [value]="warehouse.name">
                   {{ warehouse.name }}
                 </mat-option>
               </mat-autocomplete>
@@ -167,7 +122,7 @@
   </ion-card>
 
 
-  <ion-card >
+  <ion-card>
     <div class="loading-shade" *ngIf="itemDataSource.loading$ | async">
       <mat-progress-bar *ngIf="itemDataSource.loading$ | async" mode="indeterminate"></mat-progress-bar>
     </div>
@@ -230,11 +185,7 @@
         <ng-container matColumnDef="has_serial_no">
           <mat-header-cell *matHeaderCellDef>Has Serial</mat-header-cell>
           <mat-cell *matCellDef="let row">
-            <mat-checkbox
-              class="example-margin"
-              [(ngModel)]="row.has_serial_no"
-              [disabled]="true"
-            >
+            <mat-checkbox class="example-margin" [(ngModel)]="row.has_serial_no" [disabled]="true">
             </mat-checkbox>
           </mat-cell>
         </ng-container>
@@ -242,18 +193,13 @@
         <ng-container matColumnDef="add_serial">
           <mat-header-cell *matHeaderCellDef>Add Serials</mat-header-cell>
           <mat-cell *matCellDef="let row">
-            <ion-button
-              fill="outline"
-              (click)="addRow(row)"
-            >
+            <ion-button fill="outline" (click)="addRow(row)">
               <ion-icon name="Add"></ion-icon>
             </ion-button>
           </mat-cell>
         </ng-container>
 
-        <mat-header-row
-          *matHeaderRowDef="itemDisplayedColumns; sticky: true"
-        ></mat-header-row>
+        <mat-header-row *matHeaderRowDef="itemDisplayedColumns; sticky: true"></mat-header-row>
         <mat-row *matRowDef="let row; columns: itemDisplayedColumns"></mat-row>
       </mat-table>
     </ion-card-content>
@@ -274,11 +220,7 @@
     </ion-card-header>
 
     <ion-card-content class="ion-no-padding">
-      <mat-table
-        #table
-        [dataSource]="materialTransferDataSource"
-        style="width: 100%;"
-      >
+      <mat-table #table [dataSource]="materialTransferDataSource" style="width: 100%;">
         <ng-container matColumnDef="s_warehouse">
           <mat-header-cell *matHeaderCellDef>Source Warehouse</mat-header-cell>
           <mat-cell *matCellDef="let row">
@@ -315,16 +257,11 @@
           </mat-cell>
         </ng-container>
 
-        <ng-container matColumnDef="serial_no" >
+        <ng-container matColumnDef="serial_no">
           <mat-header-cell *matHeaderCellDef>Serials</mat-header-cell>
           <mat-cell *matCellDef="let row">
-            <input
-              matInput
-              oninput="this.value = this.value.toUpperCase()"
-              *ngIf="!row.serial_no[1]"
-              [disabled]="row.serial_no[0] === 'Non Serial Item' ? true : false"
-              [(ngModel)]="row.serial_no[0]"
-            />
+            <input matInput oninput="this.value = this.value.toUpperCase()" *ngIf="!row.serial_no[1]"
+              [disabled]="row.serial_no[0] === 'Non Serial Item' ? true : false" [(ngModel)]="row.serial_no[0]" />
             <p *ngIf="row.serial_no.length === 1 ? false : true">
               {{ getSerialsInputValue(row) }}
             </p>
@@ -334,27 +271,18 @@
         <ng-container matColumnDef="delete">
           <mat-header-cell *matHeaderCellDef>Delete Serials</mat-header-cell>
           <mat-cell *matCellDef="let row; let i = index">
-            <ion-button
-              [disabled]="readonly"
-              color="danger"
-              fill="clear"
-              (click)="deleteRow(row, i)"
-            >
+            <ion-button [disabled]="readonly" color="danger" fill="clear" (click)="deleteRow(row, i)">
               <ion-icon name="trash"></ion-icon>
             </ion-button>
           </mat-cell>
         </ng-container>
 
-        <mat-header-row
-          *matHeaderRowDef="materialTransferDisplayedColumns; sticky: true"
-        ></mat-header-row>
-        <mat-row
-          *matRowDef="
+        <mat-header-row *matHeaderRowDef="materialTransferDisplayedColumns; sticky: true"></mat-header-row>
+        <mat-row *matRowDef="
             let row;
             columns: materialTransferDisplayedColumns;
             let i = index
-          "
-        ></mat-row>
+          "></mat-row>
       </mat-table>
     </ion-card-content>
   </ion-card>
