feat(rma-frontend):Modified Stock Entry Page

--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/inline-edit/inline-edit.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/inline-edit/inline-edit.component.html
@@ -22,6 +22,16 @@
     </mat-autocomplete>
   </mat-form-field>
 
+  <mat-form-field *ngIf="column === 'serial_no'">
+    <input
+      type="text"
+      placeholder="Enter a Serial No"
+      matInput
+      name="serial_no"
+      [(ngModel)]="serial_no"
+    />
+  </mat-form-field>
+
   <mat-form-field *ngIf="column === 'warehouse'">
     <input
       type="text"
