feat(excel-rma): Add name insted of naming series for customer and supplier

--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
@@ -200,7 +200,7 @@
             Supplier
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
-            {{row.supplier}}
+            {{row.supplier_name}}
           </mat-cell>
           <mat-footer-cell *matFooterCellDef>
             Total
