--- a/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-frontend/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -22,7 +22,7 @@
   </ion-card-header>
 
   <ion-card-content class="ion-no-padding">
-    <mat-table #table style="width: 100%;">
+    <mat-table #table [dataSource]="dataSource" style="width: 100%;">
       <ng-container matColumnDef="invoice_no">
         <mat-header-cell *matHeaderCellDef>Invoice No</mat-header-cell>
         <mat-cell *matCellDef="let row">
@@ -47,7 +47,7 @@
         <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
-            {{ row.date }}
+            {{ row.posting_date }}
           </ng-container>
         </mat-cell>
         <mat-footer-cell *matFooterCellDef></mat-footer-cell>
@@ -69,7 +69,7 @@
         <mat-header-cell *matHeaderCellDef>Invoice Amount</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
-            {{ row.invoice_amount }}
+            {{ row.total }}
           </ng-container>
         </mat-cell>
         <mat-footer-cell *matFooterCellDef></mat-footer-cell>
@@ -110,7 +110,7 @@
       <ng-container matColumnDef="submitted_by">
         <mat-header-cell *matHeaderCellDef>Submitted by</mat-header-cell>
         <mat-cell *matCellDef="let row">
-          {{ row.submitted_by }}
+          {{ row.created_by }}
         </mat-cell>
         <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
       </ng-container>
@@ -124,5 +124,15 @@
         *matFooterRowDef="displayedColumns; sticky: true"
       ></mat-footer-row>
     </mat-table>
+    <mat-card-actions>
+      <mat-paginator
+        #paginator
+        class="mat-paginator-sticky"
+        (page)="getUpdate($event)"
+        [length]="dataSource.length"
+        [pageSizeOptions]="[10, 50, 100, 500]"
+      >
+      </mat-paginator>
+    </mat-card-actions>
   </ion-card-content>
 </ion-card>
