feat(rma-frontend):Linked rma to Warranty App

--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -157,7 +157,7 @@
           <ion-menu-toggle auto-hide="false">
             <ion-item
               *ngIf="loggedIn"
-              [href]=""
+              (click)="openWarrantyApp()"
               lines="none"
               routerLinkActive="active"
             >
