--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -12,7 +12,7 @@
         <ion-col class="ion-text-right">
           <ion-button
             color="tertiary"
-            [routerLink]="['/warranty/stock-entry', 'new', uuid]"
+            [routerLink]="['/warranty/stock-entry', 'new', warrantyClaimUuid]"
           >
             Add
           </ion-button>
@@ -39,7 +39,7 @@
         <mat-header-cell *matHeaderCellDef>Claim No</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
-            {{ row.claim_no }}
+            {{ warrantyClaimUuid }}
           </ng-container>
         </mat-cell>
         <mat-footer-cell *matFooterCellDef></mat-footer-cell>
