feat: Warranty App URL in settings

--- a/packages/rma-frontend/src/app/settings/settings.page.html
+++ b/packages/rma-frontend/src/app/settings/settings.page.html
@@ -134,6 +134,15 @@
         <mat-form-field class="mat-input-wrapper">
           <input
             matInput
+            placeholder="Warranty App URL"
+            type="text"
+            formControlName="warrantyAppURL"
+            readonly
+          />
+        </mat-form-field>
+        <mat-form-field class="mat-input-wrapper">
+          <input
+            matInput
             placeholder="Frontend Client ID"
             type="text"
             formControlName="frontendClientId"
