--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -398,7 +398,7 @@
                     *ngFor="let option of territoryList |async"
                     [value]="option"
                   >
-                    {{ option.warehouse }}
+                    {{ option.name }}
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.receiving_branch.hasError('required')">
@@ -426,7 +426,7 @@
                     *ngFor="let option of territoryList |async"
                     [value]="option"
                   >
-                    {{ option.warehouse }}
+                    {{ option.name }}
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.delivery_branch.hasError('required')">
