feat(rma-warranty):Modified required changes

--- a/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/add-warranty-claim/add-warranty-claim.page.html
@@ -380,7 +380,7 @@
                     *ngFor="let option of territoryList |async"
                     [value]="option"
                   >
-                    {{ option.name }}
+                    {{ option.name }} <small>{{ option.warehouse }}</small>
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.receiving_branch.hasError('required')">
@@ -407,7 +407,7 @@
                     *ngFor="let option of territoryList |async"
                     [value]="option"
                   >
-                    {{ option.name }}
+                    {{ option.name }} <small>{{ option.warehouse }}</small>
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.delivery_branch.hasError('required')">
