--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -33,7 +33,6 @@
               <input
                 matInput
                 type="text"
-                required
                 placeholder="Status from"
                 formControlName="status_from"
                 [matAutocomplete]="recievingBranch"
@@ -48,7 +47,7 @@
                   *ngFor="let option of territoryList | async"
                   [value]="option"
                 >
-                  {{ option.warehouse }}
+                  {{ option.name }} <small>{{ option.warehouse }}</small>
                 </mat-option>
               </mat-autocomplete>
               <mat-error *ngIf="f.status_from.hasError('required')">
@@ -61,7 +60,6 @@
               <input
                 matInput
                 type="text"
-                required
                 placeholder="Transfer branch"
                 formControlName="transfer_branch"
                 [matAutocomplete]="deliveryBranch"
@@ -76,7 +74,7 @@
                   *ngFor="let option of territoryList | async"
                   [value]="option"
                 >
-                  {{ option.warehouse }}
+                  {{ option.name }} <small>{{ option.warehouse }}</small>
                 </mat-option>
               </mat-autocomplete>
               <mat-error *ngIf="f.transfer_branch.hasError('required')">
@@ -91,7 +89,6 @@
               <input
                 matInput
                 type="text"
-                required
                 placeholder="Curent Status / Verdict"
                 formControlName="current_status_verdict"
                 [matAutocomplete]="currentState"
@@ -100,6 +97,7 @@
                 autoActiveFirstOption
                 #currentState="matAutocomplete"
                 [displayWith]="getCurrentStatus"
+                (optionSelected)="selectedCurrentStatus($event.option.value)"
               >
                 <mat-option
                   *ngFor="let option of currentStatus"
@@ -118,7 +116,6 @@
               <input
                 matInput
                 type="text"
-                required
                 placeholder="Delivery Status"
                 formControlName="delivery_status"
                 [matAutocomplete]="deliveryState"
@@ -147,7 +144,6 @@
             <mat-form-field class="example-full-width">
               <input
                 matInput
-                required
                 [matDatepicker]="posting_date"
                 placeholder="Posting Date"
                 formControlName="posting_date"
