feat(rma-warranty):fixed changes

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -47,7 +47,7 @@
                   *ngFor="let option of territoryList | async"
                   [value]="option"
                 >
-                  {{ option.name }} <small>{{ option.warehouse }}</small>
+                  {{ option.name }} <small>({{ option.warehouse }})</small>
                 </mat-option>
               </mat-autocomplete>
               <mat-error *ngIf="f.status_from.hasError('required')">
@@ -74,7 +74,7 @@
                   *ngFor="let option of territoryList | async"
                   [value]="option"
                 >
-                  {{ option.name }} <small>{{ option.warehouse }}</small>
+                  {{ option.name }} <small>({{ option.warehouse }})</small>
                 </mat-option>
               </mat-autocomplete>
               <mat-error *ngIf="f.transfer_branch.hasError('required')">
