--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -71,7 +71,8 @@
                     *ngFor="let option of filteredCustomerList | async"
                     [value]="option"
                   >
-                    {{ option.customer_name }} <small>{{ option.name }}</small>
+                    {{ option.customer_name }}
+                    <small>({{ option.name }})</small>
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.customer_name.hasError('required')">
@@ -204,7 +205,7 @@
                     *ngFor="let option of territoryList | async"
                     [value]="option"
                   >
-                    {{ option.name }} <small>{{ option.warehouse }}</small>
+                    {{ option.name }} <small>({{ option.warehouse }})</small>
                   </mat-option>
                 </mat-autocomplete>
                 <mat-error *ngIf="f.branch.hasError('required')">
