feat(rma-warranty):Added warranty claim naming series

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/service-invoices.component.html
@@ -78,7 +78,7 @@
       <ng-container matColumnDef="claim_no">
         <mat-header-cell *matHeaderCellDef>Claim No</mat-header-cell>
         <mat-cell *matCellDef="let row">
-          {{ invoiceUuid }}
+          {{ warrantyObject?.claim_no }}
         </mat-cell>
         <mat-footer-cell *matFooterCellDef> </mat-footer-cell>
       </ng-container>
