--- a/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
@@ -216,7 +216,7 @@
             Claim no
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
-            {{row.uuid}}
+            {{row.claim_no}}
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
         </ng-container>
