--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/stock-entry.component.html
@@ -39,7 +39,7 @@
         <mat-header-cell *matHeaderCellDef>Claim No</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
-            {{ warrantyClaimUuid }}
+            {{ warrantyObject?.claim_no }}
           </ng-container>
         </mat-cell>
         <mat-footer-cell *matFooterCellDef></mat-footer-cell>
