--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/view-warranty-claims.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/view-warranty-claims.page.html
@@ -34,7 +34,8 @@
   </ion-card>
   <div [ngSwitch]="selectedSegment">
     <claim-details *ngSwitchCase="0"> </claim-details>
-    <service-invoices *ngSwitchCase="1"> </service-invoices>
+    <service-invoices *ngSwitchCase="1" [warrantyObject]="warrantyDetail">
+    </service-invoices>
     <status-history *ngSwitchCase="2" [warrantyObject]="warrantyDetail">
     </status-history>
     <stock-entry *ngSwitchCase="3" [warrantyObject]="warrantyDetail">
